--- a/lib/orats/templates/base/docker-compose.yml
+++ b/lib/orats/templates/base/docker-compose.yml
@@ -6,16 +6,16 @@ services:
     environment:
       POSTGRES_USER: 'orats_base'
       POSTGRES_PASSWORD: 'yourpassword'
-    ports:
-      - '5432:5432'
+    expose:
+      - "5432"
     volumes:
       - 'postgres:/var/lib/postgresql/data'
 
   redis:
     image: 'redis:3.2-alpine'
     command: redis-server --requirepass yourpassword
-    ports:
-      - '6379:6379'
+    expose:
+      - "6379"
     volumes:
       - 'redis:/var/lib/redis/data'
 
@@ -47,8 +47,8 @@ services:
       - 'redis'
     build: .
     command: puma -p 28080 cable/config.ru
-    ports:
-      - '28080:28080'
+    expose:
+      - "28080"
     volumes:
       - '.:/orats_base'
     env_file:
